--- a/vehicle.html
+++ b/vehicle.html
@@ -25,7 +25,7 @@
               </div></li>
             <li><button class="dropbtn">Sell item</button></li>
             <li> <button class="dropbtn">Contact us</button></li>
-            <li><button class="dropbtn">Help</button></li>
+            <li><button class="dropbtn">About</button></li>
         </ul>
     </nav>
     <hr> 
