contact page added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
               </div></li>
             <li><button class="dropbtn">Sell item</button></li>
-            <li> <button class="dropbtn">Contact us</button></li>
+            <li> <button class="dropbtn"> <a id="contact" href="contact.html"> Contact us </a></button></li>
             <li><button class="dropbtn">About</button></li>
         </ul>
     </nav>
@@ -71,6 +71,7 @@
             <div class="icons">
                 <svg fill="red" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M19 24h-14v-16l-2 1.084-3-3.612 6-5.472h12l6 5.505-3 3.647-2-1.152v16zm-11-23h8c-.365 1.846-1.792 3.5-4 3.5s-3.635-1.708-4-3.5z"/></svg>
             </div>
+            
             <h4>Fashion & Beauty:</h4>
             <P>Jewellery</P>
             <P>Bags</P>
